--- a/arrhythmia_on_ecg_classification_using_cnn.ipynb
+++ b/arrhythmia_on_ecg_classification_using_cnn.ipynb
@@ -1880,7 +1880,7 @@
         "## CNN 기반의 MultiClassClassifier\n",
         "- 3층의 Convolutaional 레이어와 3층의 Fully Connected 레이어로 이루어진 MultiClassClassifier를 선언합니다.\n",
         "- Convolutaional 레이어를 거치며 재구축된 sample의 representation을 통해 Fully Connected 레이어에서 분류 작업을 수행하는 모델입니다.\n",
-        "- 출력값은 softmax 함수를 거쳐 아래와 같이 클래스별 확률값을 0과 1 사이로 반환됩니다.\n",
+        "- 출력값은 softmax 함수를 거쳐 아래와 같이 클래스별 확률값이 0과 1 사이로 반환됩니다.\n",
         "- [0.1672, 0.2058, 0.1893, 0.2339, 0.2038]\n",
         "- 이 중 가장 높은 값의 위치가 샘플에 대한 모델의 예측 클래스가 됩니다."
       ],
