Colaboratory를 통해 생성됨

--- a/stylegan2.ipynb
+++ b/stylegan2.ipynb
@@ -13,21 +13,9 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9r4UQEzphrBC"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jeffheaton/present/blob/master/youtube/gan/colab_gan_train.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_9qbVplkZYjp"
       },
       "source": [
-        "![Jeff Heaton](https://raw.githubusercontent.com/jeffheaton/present/master/images/github.jpg)\n",
-        "\n",
-        "Copyright 2021 by [Jeff Heaton](https://www.youtube.com/channel/UCR1-GEpyOPzT2AO4D_eifdw), [released under Apache 2.0 license](https://github.com/jeffheaton/present/blob/master/LICENSE)\n",
         "# Training StyleGAN2 in Google CoLab\n",
         "\n",
         "GANs can be trained with either Google Colab Free or Pro.  The Pro version is reccomended due to better GPU instances, longer runtimes, and timeouts.  Make sure that you are running this notebook with a GPU runtime.\n",
@@ -60,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "iPrGcTX8c7E-",
         "colab": {
@@ -121,7 +109,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f52d7575-a413-463e-f11a-a2c5ee482200"
+        "outputId": "583200bb-3002-4103-9be6-08b79f81d7b3"
       },
       "outputs": [
         {
@@ -155,22 +143,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "uNqsi6VWAlWo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49bbe323-89ab-487e-dbda-fa6970c1e1f4"
+        "outputId": "92e4e8bb-6d66-4799-fb0c-25c8a9e558dd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 804.1 MB 6.5 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 17.4 MB 70.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 145 kB 71.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 804.1 MB 6.2 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 17.4 MB 283 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 145 kB 58.4 MB/s \n",
             "\u001b[K     |████████████████████████████████| 54 kB 3.5 MB/s \n",
             "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
             "torchtext 0.14.0 requires torch==1.13.0, but you have torch 1.8.1 which is incompatible.\n",
@@ -178,7 +166,7 @@
             "\u001b[?25hCloning into 'stylegan2-ada-pytorch'...\n",
             "remote: Enumerating objects: 128, done.\u001b[K\n",
             "remote: Total 128 (delta 0), reused 0 (delta 0), pack-reused 128\u001b[K\n",
-            "Receiving objects: 100% (128/128), 1.12 MiB | 17.66 MiB/s, done.\n",
+            "Receiving objects: 100% (128/128), 1.12 MiB | 35.87 MiB/s, done.\n",
             "Resolving deltas: 100% (57/57), done.\n",
             "Cloning into 'pyimgdata'...\n",
             "remote: Enumerating objects: 31, done.\u001b[K\n",
@@ -196,6 +184,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 폴더를 생성하고 크롤링을 시작합니다."
+      ],
+      "metadata": {
+        "id": "ymAilYhWl_px"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!mkdir -p /content/drive/MyDrive/data/gan/images\n",
@@ -205,8 +202,18 @@
       "metadata": {
         "id": "5BzTjZ2Lh3AP"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-  flickr 계정을 생성하고 api key/secret을 부여받아야 합니다.\n",
+        "- /content/pyimgdata/config_flickr.ini 설정이 필요합니다."
+      ],
+      "metadata": {
+        "id": "ZuXoGNnRmLX_"
+      }
     },
     {
       "cell_type": "code",
@@ -222,7 +229,7 @@
         "id": "9droAEVBi0Ur",
         "outputId": "828ddae8-a590-4b41-c474-9d2154358ac4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,34 +337,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_snJl4FEGi4w"
-      },
-      "source": [
-        "# Find Your Files\n",
-        "\n",
-        "The drive is mounted to the following location.\n",
-        "\n",
-        "```\n",
-        "/content/drive/MyDrive/data\n",
-        "```\n",
-        "\n",
-        "It might be helpful to use an ```ls``` command to establish the exact path for your images."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LGdFfTSXBBr5"
-      },
-      "outputs": [],
-      "source": [
-        "!ls /content/drive/MyDrive/data/gan/images"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xmSOo3HvGwgV"
       },
       "source": [
@@ -368,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "FLKBUUfXHJ0a",
         "colab": {
@@ -440,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "lYP2NlwHA6r9",
         "colab": {
@@ -478,7 +457,7 @@
       },
       "outputs": [],
       "source": [
-        "#!rm -R /content/drive/MyDrive/data/gan/dataset/circuit/*"
+        "#!rm -R /content/drive/MyDrive/data/gan/dataset/*"
       ]
     },
     {
@@ -763,17 +742,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "j4g2FUCwG1U_"
-      },
-      "outputs": [],
-      "source": [
-        "# !/usr/bin/python3 /content/stylegan2-ada-pytorch/train.py --snap 25 --resume /content/drive/MyDrive/data/gan/experiments/00007-circuit-auto1/network-snapshot-000500.pkl --outdir /content/drive/MyDrive/data/gan/experiments --data /content/drive/MyDrive/data/gan/dataset/circuit"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NS-oe6jMG_0A"
@@ -790,15 +758,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "185d7c51-ce26-48cf-964f-5cebb68f70ab"
+        "outputId": "8fffcdd3-4e34-453d-8098-71c8ceedd10c"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Training options:\n",
@@ -820,7 +785,7 @@
             "  },\n",
             "  \"data_loader_kwargs\": {\n",
             "    \"pin_memory\": true,\n",
-            "    \"num_workers\": 3,\n",
+            "    \"num_workers\": 2,\n",
             "    \"prefetch_factor\": 2\n",
             "  },\n",
             "  \"G_kwargs\": {\n",
@@ -892,12 +857,12 @@
             "    \"hue\": 1,\n",
             "    \"saturation\": 1\n",
             "  },\n",
-            "  \"resume_pkl\": \"/content/drive/MyDrive/data/gan/experiments/00002-dataset-auto1/network-snapshot-000120.pkl\",\n",
+            "  \"resume_pkl\": \"/content/drive/MyDrive/data/gan/experiments/00008-dataset-auto1-resumecustom/network-snapshot-000120.pkl\",\n",
             "  \"ada_kimg\": 100,\n",
-            "  \"run_dir\": \"/content/drive/MyDrive/data/gan/experiments/00003-dataset-auto1-resumecustom\"\n",
+            "  \"run_dir\": \"/content/drive/MyDrive/data/gan/experiments/00010-dataset-auto1-resumecustom\"\n",
             "}\n",
             "\n",
-            "Output directory:   /content/drive/MyDrive/data/gan/experiments/00003-dataset-auto1-resumecustom\n",
+            "Output directory:   /content/drive/MyDrive/data/gan/experiments/00010-dataset-auto1-resumecustom\n",
             "Training data:      /content/drive/MyDrive/data/gan/dataset\n",
             "Training duration:  25000 kimg\n",
             "Number of GPUs:     1\n",
@@ -909,15 +874,13 @@
             "Creating output directory...\n",
             "Launching processes...\n",
             "Loading training set...\n",
-            "/usr/local/lib/python3.8/dist-packages/torch/utils/data/dataloader.py:474: UserWarning: This DataLoader will create 3 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(_create_warning_msg(\n",
             "\n",
             "Num images:  3220\n",
             "Image shape: [3, 256, 256]\n",
             "Label shape: [0]\n",
             "\n",
             "Constructing networks...\n",
-            "Resuming from \"/content/drive/MyDrive/data/gan/experiments/00002-dataset-auto1/network-snapshot-000120.pkl\"\n",
+            "Resuming from \"/content/drive/MyDrive/data/gan/experiments/00008-dataset-auto1-resumecustom/network-snapshot-000120.pkl\"\n",
             "Setting up PyTorch plugin \"bias_act_plugin\"... Done.\n",
             "Setting up PyTorch plugin \"upfirdn2d_plugin\"... Done.\n",
             "\n",
@@ -1001,7 +964,24 @@
             "Setting up augmentation...\n",
             "Distributing across 1 GPUs...\n",
             "Setting up training phases...\n",
-            "Exporting sample images...\n"
+            "Exporting sample images...\n",
+            "Initializing logs...\n",
+            "Training for 25000 kimg...\n",
+            "\n",
+            "tick 0     kimg 0.0      time 57s          sec/tick 9.4     sec/kimg 586.39  maintenance 48.1   cpumem 5.27   gpumem 11.17  augment 0.000\n",
+            "Evaluating metrics...\n",
+            "{\"results\": {\"fid50k_full\": 50.881742740746006}, \"metric\": \"fid50k_full\", \"total_time\": 632.1434390544891, \"total_time_str\": \"10m 32s\", \"num_gpus\": 1, \"snapshot_pkl\": \"network-snapshot-000000.pkl\", \"timestamp\": 1672376965.0810986}\n",
+            "tick 1     kimg 4.0      time 16m 34s      sec/tick 285.4   sec/kimg 71.34   maintenance 650.8  cpumem 5.63   gpumem 9.39   augment 0.026\n",
+            "tick 2     kimg 8.0      time 21m 20s      sec/tick 286.5   sec/kimg 71.62   maintenance 0.1    cpumem 5.63   gpumem 4.91   augment 0.053\n",
+            "tick 3     kimg 12.0     time 26m 06s      sec/tick 285.7   sec/kimg 71.42   maintenance 0.1    cpumem 5.64   gpumem 4.91   augment 0.077\n",
+            "tick 4     kimg 16.0     time 30m 53s      sec/tick 287.2   sec/kimg 71.79   maintenance 0.2    cpumem 5.64   gpumem 4.90   augment 0.104\n",
+            "tick 5     kimg 20.0     time 35m 40s      sec/tick 286.7   sec/kimg 71.67   maintenance 0.1    cpumem 5.64   gpumem 4.96   augment 0.118\n",
+            "tick 6     kimg 24.0     time 40m 27s      sec/tick 286.9   sec/kimg 71.73   maintenance 0.1    cpumem 5.64   gpumem 4.94   augment 0.129\n",
+            "tick 7     kimg 28.0     time 45m 14s      sec/tick 286.9   sec/kimg 71.72   maintenance 0.1    cpumem 5.64   gpumem 4.97   augment 0.138\n",
+            "tick 8     kimg 32.0     time 50m 02s      sec/tick 287.4   sec/kimg 71.84   maintenance 0.1    cpumem 5.64   gpumem 4.98   augment 0.153\n",
+            "tick 9     kimg 36.0     time 54m 49s      sec/tick 286.9   sec/kimg 71.72   maintenance 0.2    cpumem 5.64   gpumem 4.91   augment 0.162\n",
+            "tick 10    kimg 40.0     time 59m 37s      sec/tick 287.5   sec/kimg 71.89   maintenance 0.2    cpumem 5.64   gpumem 4.94   augment 0.166\n",
+            "Evaluating metrics...\n"
           ]
         }
       ],
@@ -1011,21 +991,15 @@
         "# Modify these to suit your needs\n",
         "EXPERIMENTS = \"/content/drive/MyDrive/data/gan/experiments\"\n",
         "NETWORK = \"network-snapshot-000120.pkl\"\n",
-        "RESUME = os.path.join(EXPERIMENTS, \"00002-dataset-auto1\", NETWORK)\n",
+        "RESUME = os.path.join(EXPERIMENTS, \"00008-dataset-auto1-resumecustom\", NETWORK)\n",
         "DATA = \"/content/drive/MyDrive/data/gan/dataset\"\n",
         "SNAP = 10\n",
+        "WORKERS = 2\n",
         "\n",
         "# Build the command and run it\n",
-        "cmd = f\"/usr/bin/python3 /content/stylegan2-ada-pytorch/train.py --snap {SNAP} --resume {RESUME} --outdir {EXPERIMENTS} --data {DATA}\"\n",
+        "cmd = f\"/usr/bin/python3 /content/stylegan2-ada-pytorch/train.py --snap {SNAP} --resume {RESUME} --outdir {EXPERIMENTS} --data {DATA} --workers {WORKERS}\"\n",
         "!{cmd}"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xMm34ut0wKCb"
-      },
-      "source": []
     }
   ],
   "metadata": {
