ADD: image of StyleGAN generator model architecture

--- a/stylegan2.ipynb
+++ b/stylegan2.ipynb
@@ -24,12 +24,24 @@
       "source": [
         "- SytleGAN을 통해 이미지를 생성할 때는 일반적으로 시드 번호를 사용합니다.\n",
         "- 6600과 같은 정수 시드 번호를 통해 SytleGAN의 Generator가 유니크한 이미지를 생성하도록 합니다.\n",
-        "- 시드는 이미지 생성에 직접적으로 이용되는 잠재 벡터를 생성하는데 사용되며 SytleGAN의 잠재 벡터는 512개의 값들로 이루어집니다.\n",
+        "- 시드는 이미지 생성에 직접적으로 이용되는 잠재 벡터 z를 생성하는데 사용되며 SytleGAN의 잠재 벡터는 512개의 값들로 이루어집니다.\n",
         "- 또한, 잠재 벡터에 가하는 변화는 생성 이미지의 변화로 이어지며,\n",
-        "- 잠재 벡터 상의 변화가 아주 작았다고 하더라도 생성 이미지 상의 변화는 상당히 클 수 있습니다."
+        "- 잠재 벡터 상의 변화가 아주 작았다고 하더라도 생성 이미지 상의 변화는 상당히 클 수 있습니다.\n",
+        "\n"
       ],
       "metadata": {
         "id": "5sfY7dV3QJc5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### StyleGAN Generator의 구조\n",
+        "\n",
+        "![Generator](https://machinelearningmastery.com/wp-content/uploads/2019/06/Summary-of-the-StyleGAN-Generator-Model-Architecture.png)"
+      ],
+      "metadata": {
+        "id": "2fmd1Cc2ZclD"
       }
     },
     {
