--- a/cyclegan.ipynb
+++ b/cyclegan.ipynb
@@ -12,6 +12,68 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# CycleGAN\n",
+        "\n",
+        "- CycleGAN은 image-to-image translation을 위한 기술로 비지도 학습으로 구축됩니다.\n",
+        "- 또한, 비지도 학습이기에 데이터세트 구성시 Source와 Target은 쌍으로 묶일 필요가 없습니다.\n",
+        "\n",
+        "## CycleGAN 구축 예시\n",
+        "\n",
+        "### 데이터세트\n",
+        "\n",
+        "- 데이터 집합 1: 여름철 풍경 사진 집합\n",
+        "- 데이터 집합 2: 겨울철 풍경 사진 집합\n",
+        "\n",
+        "### 기능\n",
+        "\n",
+        "- GAN 1: 여름철 풍경 사진을 겨울철 풍경 사진으로 변환\n",
+        "- GAN 2: 겨울철 풍경 사진을 여름철 풍경 사진으로 변환\n",
+        "\n",
+        "### GAN 1 입출력\n",
+        "\n",
+        "- Generator Model 1:\n",
+        "  - 입력: 여름철 풍경 사진\n",
+        "  - 출력: 겨울철 풍경 사진\n",
+        "- Discriminator Model 1:\n",
+        "  - 입력: 데이터 집합 2의 겨울철 풍경 사진과 Generator Model 1의 출력\n",
+        "  - 출력: Generator Model 1의 출력이 데이터 집합 2에 속해 있을 가능도\n",
+        "\n",
+        "### GAN 2\n",
+        "\n",
+        "- Generator Model 2:\n",
+        "  - 입력: 겨울철 풍경 사진\n",
+        "  - 출력: 여름철 풍경 사진\n",
+        "- Discriminator Model 2:\n",
+        "  - 입력: 데이터 집합 1의 여름철 풍경 사진과 Generator Model 2의 출력\n",
+        "  - 출력: Generator Model 2의 출력이 데이터 집합 1에 속해 있을 가능도\n",
+        "\n",
+        "### Forward Cycle\n",
+        "\n",
+        "- 데이터 집합 1의 여름철 풍경 사진을 GAN 1의 입력으로 사용\n",
+        "- GAN 1의 출력으로 나온 겨울철 풍경 사진을 GAN 2의 입력으로 사용\n",
+        "- GAN 2의 출력으로 나온 여름철 풍경 사진과 데이터 집합 1의 여름철 풍경 사진을 비교해 오차 산출\n",
+        "\n",
+        "### Backward Cycle\n",
+        "\n",
+        "- 데이터 집합 2의 겨울철 풍경 사진을 GAN 2의 입력으로 사용\n",
+        "- GAN 2의 출력으로 나온 여름철 풍경 사진을 GAN 1의 입력으로 사용\n",
+        "- GAN 1의 출력으로 나온 겨울철 풍경 사진과 데이터 집합 2의 겨울철 풍경 사진을 비교해 오차 산출\n",
+        "\n",
+        "## CycleGAN의 적용 사례\n",
+        "\n",
+        "- Style Transfer\n",
+        "- Object Transfiguration\n",
+        "- Season Transfer\n",
+        "- Photograph Generation From Paintings\n",
+        "- Photograph Enhancement"
+      ],
+      "metadata": {
+        "id": "mBMJS_N5uewf"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "7wNjDKdQy35h"
       },
@@ -35,7 +97,7 @@
         "id": "u5ysEgymjlhl",
         "outputId": "3b9fcfff-e06a-4451-943e-583aaab2e161"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,12 +117,12 @@
       "metadata": {
         "id": "mQIH9hRcknoW"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TRm-USlsHgEV",
         "colab": {
@@ -88,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "Pt3igws3eiVp"
       },
@@ -99,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "z1EySlOXwwoa",
         "colab": {
@@ -178,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "vrdOettJxaCc",
         "colab": {
@@ -2920,7 +2982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "B75UqtKhxznS",
         "colab": {
@@ -2967,7 +3029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "0sp7TCT2x9dB",
         "colab": {
@@ -3360,7 +3422,7 @@
       "metadata": {
         "id": "D-bqb3cRFMqG"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3376,7 +3438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "uCsKkEq0yGh0",
         "colab": {
@@ -3476,7 +3538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "9Mgg8raPyizq",
         "colab": {
@@ -3527,7 +3589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "0G3oVH9DyqLQ",
         "colab": {
